# POO_TEME

./: README.md
Col_2020/: Achizitie.cpp  Achizitie.h  CMakeLists.txt  Dezinfectant.cpp  Dezinfectant.h  DezinfectantBacterii.cpp  DezinfectantBacterii.h  DezinfectantFungi.cpp  DezinfectantFungi.h  DezinfectantVirusuri.cpp  DezinfectantVirusuri.h  MascaChirurgicala.cpp  MascaChirurgicala.h  MascaPolicarbonat.cpp  MascaPolicarbonat.h  main.cpp
Colocviu_31mai2016/: CMakeLists.txt  ComOnline.cpp  ComOnline.h  ComSpec.cpp  ComSpec.h  Comanda.cpp  Comanda.h  Ospatar.cpp  Ospatar.h  Produs.cpp  Produs.h  Restaurant.cpp  Restaurant.h  main.cpp
POO_Hotel/: Apartament.cpp  Apartament.h  CMakeLists.txt  Camera.cpp  Camera.h  Grup.cpp  Grup.h  Hotel.cpp  Hotel.h  Incapere.cpp  Incapere.h  Persoana.cpp  Persoana.h  Restaurant.cpp  Restaurant.h  Sala.cpp  Sala.h  main.cpp
POO_TEMA1/: Bautura.cpp  Ciorba.cpp  Masa.h  util.cpp  util.h
POO_TEMA2/: CMakeLists.txt  main.cpp
POO_TEMA_1/POO_TEMA1/: Bautura.h  CMakeLists.txt  Ciorba.h  Client.cpp  Client.h  Desert.cpp  Desert.h  Fel_principal.cpp  Fel_principal.h  Masa.cpp  main.cpp
