cmake_minimum_required(VERSION 3.19)
project(Col_2020)

set(CMAKE_CXX_STANDARD 14)

add_executable(Col_2020 main.cpp MascaChirurgicala.cpp MascaChirurgicala.h MascaPolicarbonat.cpp MascaPolicarbonat.h Dezinfectant.cpp Dezinfectant.h DezinfectantBacterii.cpp DezinfectantBacterii.h DezinfectantVirusuri.cpp DezinfectantVirusuri.h DezinfectantFungi.cpp DezinfectantFungi.h Achizitie.cpp Achizitie.h)